--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts build",
-		"server": "CI=false && react-scripts build",
+		"server": "CI=false && react-scripts --openssl-legacy-provider build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
