--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://aleksandrriabov.github.io/portfolio",
+	"homepage": "https://main--portfolio-adilet.netlify.app/portfolio",
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
