--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Portfolio",
-  "name": "Aleksandr Riabov Portfolio Web Page",
+  "name": "Adilet Kasymbaev Portfolio Web Page",
   "icons": [
         {
             "src": "/android-chrome-72x72.png",
